setup sonarqube code quality analysis (#6)
* enable test coverage data output for both apit unit & e2e tests

* add task option for displaying coverage

* setup sonar for api

* add missing tool install for report merging

* remove term signal await

in order to check if this blocks gh actions executions.

* adjust working directory for sonar action

* revert f7a1102aaca023cb2ba15c7288bdd0369d49e05e

* use tini for proper signal propagation

* setup code coverage for vitest & playwright

* instrument sveltekit server files for e2e tests

* add script to merge coverage data and postprocess source mappings

* unify istanbul config in dedicated config file

* fix lint issues in scripts

* setup sonar for web

* add missing playwright browser install for lint workflow

* fix sonar exclusions

* fix sonar qube coverage detection

* fix invalid wildcards in sonar config

* move sonar scans to dedicated ci stage

* fix sonar indexing issue

* improve playwright install in gh actions

* drop invalid path correction for lcov

* [cs] use sonar ts scanner instead of js

* [cs] drop sonar testing config

* ignore sonar issue for re-exports in ts barrel files

* upload coverage reports as artefacts

* [cs] attempt fix coverage data collection in actions

* [cs] attempt fix coverage data collection in actions

* add graceful shutdown to e2e svelte instance

* [cs] shutdown hook logs

* leverage proper playwright teardown to stop app & container

* fix process kill signal distribution

* extend tests

* add svelte component tests

* include all svelte components

since sonar does not properly support svelte files.

* enforce sonar quality gate for ci

* use env var toggle for api e2e instrumentation

* update docs

--- a/.github/workflows/ci-web.yaml
+++ b/.github/workflows/ci-web.yaml
@@ -26,3 +26,8 @@ jobs:
     uses: ./.github/workflows/scan-web.yaml
     needs: [lint, test] # scans are expensive -> only run if state is sane
     secrets: inherit
+
+  qa:
+    uses: ./.github/workflows/qa-web.yaml
+    needs: [lint, test] # scans are expensive -> only run if state is sane
+    secrets: inherit
