--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,14 @@
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
 		"test": "pnpm run test:unit -- --run && pnpm run test:e2e",
-		"test:e2e": "playwright test"
+		"test:e2e": "playwright test",
+		"test:cov": "vitest run --coverage && pnpm run test:e2e",
+		"cov:merge": "node scripts/postprocess-coverage.cjs && nyc report --temp-dir=coverage --reporter=lcov --reporter=text-summary"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.28.3",
+		"@babel/core": "^7.28.5",
+		"@babel/preset-typescript": "^7.28.5",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
 		"@iconify/json": "^2.2.392",
@@ -28,17 +33,26 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/istanbul-lib-coverage": "^2.0.6",
+		"@types/istanbul-lib-source-maps": "^4.0.4",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^22",
 		"@types/prismjs": "^1.26.5",
 		"@types/wait-on": "^5.3.4",
-		"@vitest/browser": "^3.2.4",
+		"@vitest/browser": "^4.0.6",
+		"@vitest/coverage-istanbul": "^4.0.6",
+		"babel-plugin-istanbul": "^7.0.1",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"istanbul-lib-coverage": "^3.2.2",
+		"istanbul-lib-source-maps": "^5.0.6",
+		"istanbul-reports": "^3.2.0",
+		"jsdom": "^27.1.0",
 		"jsonwebtoken": "^9.0.2",
+		"nyc": "^17.1.0",
 		"playwright": "^1.55.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -55,7 +69,8 @@
 		"typescript-eslint": "^8.44.1",
 		"unplugin-icons": "^22.4.2",
 		"vite": "^7.1.7",
-		"vitest": "^3.2.4",
+		"vite-plugin-istanbul": "^7.2.0",
+		"vitest": "^4.0.6",
 		"vitest-browser-svelte": "^1.1.0",
 		"wait-on": "^9.0.1"
 	},
