--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -25,3 +25,8 @@ jobs:
     uses: ./.github/workflows/scan-api.yaml
     needs: [lint, test] # scans are expensive -> only run if state is sane
     secrets: inherit
+
+  qa:
+    uses: ./.github/workflows/qa-api.yaml
+    needs: [lint, test] # scans are expensive -> only run if state is sane
+    secrets: inherit
