--- a/web/taskfile.yaml
+++ b/web/taskfile.yaml
@@ -42,6 +42,16 @@ tasks:
     cmds:
       - pnpm run test:e2e
 
+  test:cov:
+    desc: Runs all tests of the project, while collecting coverage data
+    env:
+      USE_PLUGIN_ISTANBUL: true
+    cmds:
+      - rm -rf coverage
+      - pnpm run test:cov
+      - pnpm run cov:merge
+      - if [ "{{.show | default `false`}}" = "true" ]; then open coverage/combined/lcov-report/index.html; fi
+
   generate:env:
     desc: Generates a .env file holding all relevant options for a local workspace
     preconditions:
