--- a/.github/workflows/qa-api.yaml
+++ b/.github/workflows/qa-api.yaml
@@ -13,6 +13,8 @@ jobs:
         working-directory: api
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ vars.GO_VERSION }}
