--- a/.github/workflows/qa-web.yaml
+++ b/.github/workflows/qa-web.yaml
@@ -16,6 +16,8 @@ jobs:
       USE_PLUGIN_ISTANBUL: true
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: arduino/setup-task@v2
       - uses: pnpm/action-setup@v4
         name: Install pnpm
