fix: imagePullSecrets typo

--- a/infrastructure/deployment/app-backend-deployment.yaml
+++ b/infrastructure/deployment/app-backend-deployment.yaml
@@ -19,5 +19,5 @@ spec:
         image: ghcr.io/ruegerj/devops/api
         ports:
         - containerPort: 3000
-      imagePullSecret:
+      imagePullSecrets:
         - name: ghcr
