--- a/infrastructure/ansible/roles/haproxy/tasks/main.yml
+++ b/infrastructure/ansible/roles/haproxy/tasks/main.yml
@@ -30,6 +30,12 @@
     state: present
     update_cache: true
 
+- name: Gather facts for K3s server nodes
+  ansible.builtin.setup:
+  delegate_to: "{{ item }}"
+  delegate_facts: true
+  loop: "{{ groups['server'] }}"
+
 - name: Copy HAProxy config
   ansible.builtin.template:
     src: "haproxy.cfg.j2"
