cleanup inventories/staging to match structure of inventories/prod

--- a/infrastructure/ansible/inventories/staging/group_vars/k3s_cluster.yml
+++ b/infrastructure/ansible/inventories/staging/group_vars/k3s_cluster.yml
@@ -8,6 +8,10 @@ token: "CHANGE_ME!"
 
 argocd_url: "argo.g08.local"
 
+server_config_yaml: |-
+  node-ip: {{ ansible_host }}
+  node-external-ip: {{ ansible_host }}
+  
 # Optional vars
 # extra_server_args: ""
 # extra_agent_args: ""
@@ -36,3 +40,4 @@ argocd_url: "argo.g08.local"
 #   Containerd can be configured to connect to private registries and use them to pull images as needed by the kubelet.
 #   YAML here will be placed as the content of /etc/rancher/k3s/registries.yaml
 #   See https://docs.k3s.io/installation/private-registry
+
