--- a/infrastructure/ansible/inventories/staging/hosts.yml
+++ b/infrastructure/ansible/inventories/staging/hosts.yml
@@ -1,4 +1,8 @@
 all:
+  vars:
+    ansible_user: vagrant
+    ansible_ssh_private_key_file: ./id_vagrant
+    ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
   hosts:
     192.168.122.10:
     192.168.122.11:
