--- a/api/taskfile.yaml
+++ b/api/taskfile.yaml
@@ -56,6 +56,7 @@ tasks:
       - echo "HOST=localhost" >> .env
       - echo "PORT=3000" >> .env
       - echo "JWT_KEY=$(openssl rand -base64 32)" >> .env
+      - echo "TELEMETRY_ENABLED=true" >> .env
     generates:
       - .env
 
