exclude metrics from sonar coverage

--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/serve
 
 # Coverage
 sonar.coverage.inclusions=**/*.ts,**/*.svelte
-sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/**,src/lib/server/coverage.handler.ts
+sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/**,src/lib/server/coverage.handler.ts,src/metrics.server.ts,src/hooks.server.ts
 sonar.typescript.lcov.reportPaths=coverage/combined/lcov.info
 
 # Ignored rules
