--- a/infrastructure/argocd/app-root.yaml
+++ b/infrastructure/argocd/app-root.yaml
@@ -13,4 +13,4 @@ spec:
   source:
     path: infrastructure/argocd/apps 
     repoURL: https://github.com/ruegerj/devops
-    targetRevision: feature/argo-app-deployment
+    targetRevision: HEAD
