--- a/infrastructure/argocd/apps/collector.yaml
+++ b/infrastructure/argocd/apps/collector.yaml
@@ -15,6 +15,26 @@ spec:
     targetRevision: 0.141.0
     helm:
       releaseName: opentelemetry-collector
+      values: |
+        config: |
+          receivers:
+            prometheus:
+              config:
+                scrape_configs:
+                  - job_name: 'app-metrics'
+                    metrics_path: /metrics
+                    static_configs:
+                      - targets: ['app-frontend-service.default.svc.cluster.local:80', 'app-backend-service.default.svc.cluster.local:3000']
+
+          exporters:
+            prometheus:
+              endpoint: "0.0.0.0:9464"
+
+          service:
+            pipelines:
+              metrics:
+                receivers: [prometheus]
+                exporters: [prometheus]
 
   destination:
     server: "https://kubernetes.default.svc"
