--- a/infrastructure/argocd/apps/grafana.yaml
+++ b/infrastructure/argocd/apps/grafana.yaml
@@ -21,6 +21,15 @@ spec:
           enabled: true
         hosts:
           - grafana.g08.local
+        datasources:
+          datasources.yaml:
+            apiVersion: 1
+            datasources:
+              - name: Prometheus
+                type: prometheus
+                url: http://prometheus-server.observability.svc.cluster.local
+                access: proxy
+                isDefault: true
 
   destination:
     server: "https://kubernetes.default.svc"
