--- a/infrastructure/argocd/apps/prometheus.yaml
+++ b/infrastructure/argocd/apps/prometheus.yaml
@@ -15,6 +15,13 @@ spec:
     targetRevision: 27.50.0
     helm:
       releaseName: prometheus
+      values: |
+        server:
+          extraScrapeConfigs: |-
+            - job_name: 'otel-collector'
+              metrics_path: /metrics
+              static_configs:
+                - targets: ['opentelemetry-collector.observability.svc.cluster.local:9464']
   destination:
     server: "https://kubernetes.default.svc"
     namespace: observability
