--- a/infrastructure/argocd/apps/app.yaml
+++ b/infrastructure/argocd/apps/app.yaml
@@ -12,7 +12,7 @@ spec:
 
   source:
     repoURL: https://github.com/ruegerj/devops  
-    targetRevision: HEAD
+    targetRevision: feature/app-telemetry
     path: infrastructure/argocd/deployment 
     directory:
       recurse: true
